Fix information visibility problem in IE.

--- a/src/RectangleControl.scss
+++ b/src/RectangleControl.scss
@@ -33,6 +33,7 @@
   min-width: 220px;
   top: 1em;
   box-shadow: 0 1px 3px rgba(0,0,0,0.3);
+  z-index: 10;
 }
 
 .regionview-map > .info {
